--- a/windowsupdate.yaml
+++ b/windowsupdate.yaml
@@ -5,17 +5,19 @@
 # https://docs.ansible.com/ansible/win_reboot_module.html
 
 - name:  Windows Update
-  hosts: all
-  gather_facts: false
+  hosts: windows_wm
   tasks:
-    - name: Running Windows Update
+    - name: Check for updates
       win_updates:
-        category_names: ['SecurityUpdates','CriticalUpdates','UpdateRollups', 'Updates', 'DefinitionUpdates']
-      register: result
+        category_names: SecurityUpdates, CriticalUpdates
+        state: searched
+      register: update_result
 
-    # output results
-    - debug: var=result
-    
-    # reboot only if required
-    - win_reboot:
-      when: result.reboot_required
+    - name: Install updates
+      win_updates:
+        state: installed
+      when: update_result.updates | length > 0
+
+    - name: Reboot if updates were installed
+      win_reboot:
+      when: update_result.reboot_required
