--- a/auto_update_os.yaml
+++ b/auto_update_os.yaml
@@ -1,7 +1,7 @@
----
-- hosts: ubuntu-vm
+- hosts: ubuntu-srv
+  gather_facts: yes
+  become: yes
 
-  become: true
   tasks:
     - name: Perform a dist-upgrade.
       ansible.builtin.apt:
