--- a/windowsupdate.yaml
+++ b/windowsupdate.yaml
@@ -1,23 +1,11 @@
----
-# Ansible playbook to run Windows Update and restart, if required
-#
-# http://docs.ansible.com/ansible/win_updates_module.html
-# https://docs.ansible.com/ansible/win_reboot_module.html
-
-- name:  Windows Update
-  hosts: all
-  tasks:
-    - name: Check for updates
-      win_updates:
-        category_names: SecurityUpdates, CriticalUpdates
-        state: searched
-      register: update_result
-
-    - name: Install updates
-      win_updates:
-        state: installed
-      when: update_result.updates | length > 0
-
-    - name: Reboot if updates were installed
-      win_reboot:
-      when: update_result.reboot_required
+- name: Install all critical and security updates
+  win_updates:
+    category_names:
+    - CriticalUpdates
+    - SecurityUpdates
+    - UpdateRollups
+    state: installed
+  register: update_result
+        - name: reboot host if required
+          win_reboot:
+          when: update_result.reboot_required
