--- a/windows_update.yaml
+++ b/windows_update.yaml
@@ -1,3 +1,8 @@
+- hosts: all
+  gather_facts: yes
+  become: yes
+
+
 - name: Install all critical and security updates
   win_updates:
     category_names:
