--- a/windows_update.yaml
+++ b/windows_update.yaml
@@ -1,7 +1,7 @@
 - hosts: all
   gather_facts: yes
   become: yes
-
+tasks:
 - name: Install all critical and security updates
   win_updates:
     category_names:
