--- a/windows_update.yaml
+++ b/windows_update.yaml
@@ -1,15 +1,16 @@
-- hosts: all
-  gather_facts: yes
-  become: yes
+- name:  Windows Update
+  hosts: all
+  gather_facts: false
   tasks:
-  - name: Install all critical and security updates
-    win_updates:
-    category_names:
-    - CriticalUpdates
-    - SecurityUpdates
-    - UpdateRollups
-    state: installed
-  register: update_result
-        - name: reboot host if required
-          win_reboot:
-          when: update_result.reboot_required
+    - name: Running Windows Update
+      win_updates:
+        category_names: ['SecurityUpdates','CriticalUpdates','UpdateRollups', 'Updates', 'DefinitionUpdates']
+      register: result
+
+    # output results
+    - debug: var=result
+    
+    # reboot only if required
+    - win_reboot:
+      when: result.reboot_required
+      
